--- a/src/main/resources/templates/tables.html
+++ b/src/main/resources/templates/tables.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -36,7 +36,7 @@
         <!-- Sidebar Header    -->
         <div class="sidenav-header d-flex align-items-center justify-content-center">
             <!-- User Info-->
-            <div class="sidenav-header-inner text-center"><img src="img/avatar-7.jpg" alt="person"
+            <div class="sidenav-header-inner text-center"><img th:src="@{/img/avatar-7.jpg}" alt="person"
                                                                class="img-fluid rounded-circle">
                 <h2 class="h5">Nathan Andrews</h2><span>Web Developer</span>
             </div>
@@ -139,7 +139,7 @@
                                 class="fa fa-envelope"></i><span class="badge badge-info">10</span></a>
                             <ul aria-labelledby="notifications" class="dropdown-menu">
                                 <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                    <div class="msg-profile"><img src="img/avatar-1.jpg" alt="..."
+                                    <div class="msg-profile"><img th:src="@{/img/avatar-1.jpg}" alt="..."
                                                                   class="img-fluid rounded-circle"></div>
                                     <div class="msg-body">
                                         <h3 class="h5">Jason Doe</h3><span>sent you a direct message</span><small>3 days
@@ -147,7 +147,7 @@
                                     </div>
                                 </a></li>
                                 <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                    <div class="msg-profile"><img src="img/avatar-2.jpg" alt="..."
+                                    <div class="msg-profile"><img th:src="@{/img/avatar-2.jpg}" alt="..."
                                                                   class="img-fluid rounded-circle"></div>
                                     <div class="msg-body">
                                         <h3 class="h5">Frank Williams</h3><span>sent you a direct message</span><small>3
@@ -155,7 +155,7 @@
                                     </div>
                                 </a></li>
                                 <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                    <div class="msg-profile"><img src="img/avatar-3.jpg" alt="..."
+                                    <div class="msg-profile"><img th:src="@{/img/avatar-3.jpg}" alt="..."
                                                                   class="img-fluid rounded-circle"></div>
                                     <div class="msg-body">
                                         <h3 class="h5">Ashley Wood</h3><span>sent you a direct message</span><small>3
@@ -171,14 +171,14 @@
                                                          data-toggle="dropdown" aria-haspopup="true"
                                                          aria-expanded="false"
                                                          class="nav-link language dropdown-toggle"><img
-                                src="img/flags/16/GB.png" alt="English"><span
+                                th:src="@{/img/flags/16/GB.png}" alt="English"><span
                                 class="d-none d-sm-inline-block">English</span></a>
                             <ul aria-labelledby="languages" class="dropdown-menu">
-                                <li><a rel="nofollow" href="#" class="dropdown-item"> <img src="img/flags/16/DE.png"
+                                <li><a rel="nofollow" href="#" class="dropdown-item"> <img th:src="@{/img/flags/16/DE.png}"
                                                                                            alt="English"
                                                                                            class="mr-2"><span>German</span></a>
                                 </li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item"> <img src="img/flags/16/FR.png"
+                                <li><a rel="nofollow" href="#" class="dropdown-item"> <img th:src="@{/img/flags/16/FR.png}"
                                                                                            alt="English"
                                                                                            class="mr-2"><span>French                                                         </span></a>
                                 </li>
@@ -410,15 +410,15 @@
     </footer>
 </div>
 <!-- JavaScript files-->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/popper.js/umd/popper.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<script src="js/grasp_mobile_progress_circle-1.0.0.min.js"></script>
-<script src="vendor/jquery.cookie/jquery.cookie.js"></script>
-<script src="vendor/chart.js/Chart.min.js"></script>
-<script src="vendor/jquery-validation/jquery.validate.min.js"></script>
-<script src="vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/popper.js/umd/popper.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/grasp_mobile_progress_circle-1.0.0.min.js}"></script>
+<script th:src="@{/vendor/jquery.cookie/jquery.cookie.js}"></script>
+<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
+<script th:src="@{/vendor/jquery-validation/jquery.validate.min.js}"></script>
+<script th:src="@{/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js}"></script>
 <!-- Main File-->
-<script src="js/front.js"></script>
+<script th:src="@{/js/front.js}"></script>
 </body>
 </html>
