--- a/src/main/resources/templates/forms.html
+++ b/src/main/resources/templates/forms.html
@@ -38,7 +38,7 @@
             <!-- User Info-->
             <div class="sidenav-header-inner text-center"><img th:src="@{/img/avatar-7.jpg}" alt="person"
                                                                class="img-fluid rounded-circle">
-                <h2 class="h5">Nathan Andrews</h2><span>Web Developer</span>
+                <h2 class="h5">[[${session.loginUser}]]</h2><span>Web Developer</span>
             </div>
             <!-- Small Brand information, appears on minimized sidebar-->
             <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center">
@@ -48,10 +48,10 @@
         <div class="main-menu">
             <h5 class="sidenav-heading">Main</h5>
             <ul id="side-main-menu" class="side-menu list-unstyled">
-                <li><a href="index.html"> <i class="icon-home"></i>Home </a></li>
-                <li class="active"><a href="forms.html"> <i class="icon-form"></i>Forms </a></li>
-                <li><a href="charts.html"> <i class="fa fa-bar-chart"></i>Charts </a></li>
-                <li><a href="tables.html"> <i class="icon-grid"></i>Tables </a></li>
+                <li><a th:href="@{/index}"> <i class="icon-home"></i>Home </a></li>
+                <li class="active"><a th:href="@{/forms}"> <i class="icon-form"></i>Forms </a></li>
+                <li><a th:href="@{/charts}"> <i class="fa fa-bar-chart"></i>Charts </a></li>
+                <li><a th:href="@{/tables}"> <i class="icon-grid"></i>Tables </a></li>
                 <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i
                         class="icon-interface-windows"></i>Example dropdown </a>
                     <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
@@ -185,7 +185,7 @@
                             </ul>
                         </li>
                         <!-- Log out-->
-                        <li class="nav-item"><a href="login.html" class="nav-link logout"> <span
+                        <li class="nav-item"><a th:href="@{/user/logout}" class="nav-link logout"> <span
                                 class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i></a></li>
                     </ul>
                 </div>
