--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,166 +31,11 @@
 </head>
 <body>
 <!-- Side Navbar -->
-<nav class="side-navbar">
-    <div class="side-navbar-wrapper">
-        <!-- Sidebar Header    -->
-        <div class="sidenav-header d-flex align-items-center justify-content-center">
-            <!-- User Info-->
-            <div class="sidenav-header-inner text-center"><img th:src="@{/img/avatar-7.jpg}" alt="person"
-                                                               class="img-fluid rounded-circle">
-                <h2 class="h5">[[${session.loginUser}]]</h2><span>Web Developer</span>
-            </div>
-            <!-- Small Brand information, appears on minimized sidebar-->
-            <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center">
-                <strong>B</strong><strong class="text-primary">D</strong></a></div>
-        </div>
-        <!-- Sidebar Navigation Menus-->
-        <div class="main-menu">
-            <h5 class="sidenav-heading">Main</h5>
-            <ul id="side-main-menu" class="side-menu list-unstyled">
-                <li><a th:href="@{/index}"> <i class="icon-home"></i>Home </a></li>
-                <li><a th:href="@{/forms}"> <i class="icon-form"></i>Forms </a></li>
-                <li><a th:href="@{/charts}"> <i class="fa fa-bar-chart"></i>Charts </a></li>
-                <li><a th:href="@{/tables}"> <i class="icon-grid"></i>Tables </a></li>
-                <li><a href="#exampledropdownDropdown" aria-expanded="false" data-toggle="collapse"> <i
-                        class="icon-interface-windows"></i>Example dropdown </a>
-                    <ul id="exampledropdownDropdown" class="collapse list-unstyled ">
-                        <li><a href="#">Page</a></li>
-                        <li><a href="#">Page</a></li>
-                        <li><a href="#">Page</a></li>
-                    </ul>
-                </li>
-                <li><a href="login.html"> <i class="icon-interface-windows"></i>Login page </a></li>
-                <li><a href="#"> <i class="icon-mail"></i>Demo
-                    <div class="badge badge-warning">6 New</div>
-                </a></li>
-            </ul>
-        </div>
-        <div class="admin-menu">
-            <h5 class="sidenav-heading">Second menu</h5>
-            <ul id="side-admin-menu" class="side-menu list-unstyled">
-                <li><a href="#"> <i class="icon-screen"> </i>Demo</a></li>
-                <li><a href="#"> <i class="icon-flask"> </i>Demo
-                    <div class="badge badge-info">Special</div>
-                </a></li>
-                <li><a href=""> <i class="icon-flask"> </i>Demo</a></li>
-                <li><a href=""> <i class="icon-picture"> </i>Demo</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:insert="~{commons/common::side-navbar(highlight='index')}"></div>
 <div class="page">
     <!-- navbar-->
     <header class="header">
-        <nav class="navbar">
-            <div class="container-fluid">
-                <div class="navbar-holder d-flex align-items-center justify-content-between">
-                    <div class="navbar-header"><a id="toggle-btn" href="#" class="menu-btn"><i
-                            class="icon-bars"> </i></a><a href="index.html" class="navbar-brand">
-                        <div class="brand-text d-none d-md-inline-block"><span>Bootstrap </span><strong
-                                class="text-primary">Dashboard</strong></div>
-                    </a></div>
-                    <ul class="nav-menu list-unstyled d-flex flex-md-row align-items-md-center">
-                        <!-- Notifications dropdown-->
-                        <li class="nav-item dropdown"><a id="notifications" rel="nofollow" data-target="#" href="#"
-                                                         data-toggle="dropdown" aria-haspopup="true"
-                                                         aria-expanded="false" class="nav-link"><i
-                                class="fa fa-bell"></i><span class="badge badge-warning">12</span></a>
-                            <ul aria-labelledby="notifications" class="dropdown-menu">
-                                <li><a rel="nofollow" href="#" class="dropdown-item">
-                                    <div class="notification d-flex justify-content-between">
-                                        <div class="notification-content"><i class="fa fa-envelope"></i>You have 6 new
-                                            messages
-                                        </div>
-                                        <div class="notification-time"><small>4 minutes ago</small></div>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item">
-                                    <div class="notification d-flex justify-content-between">
-                                        <div class="notification-content"><i class="fa fa-twitter"></i>You have 2
-                                            followers
-                                        </div>
-                                        <div class="notification-time"><small>4 minutes ago</small></div>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item">
-                                    <div class="notification d-flex justify-content-between">
-                                        <div class="notification-content"><i class="fa fa-upload"></i>Server Rebooted
-                                        </div>
-                                        <div class="notification-time"><small>4 minutes ago</small></div>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item">
-                                    <div class="notification d-flex justify-content-between">
-                                        <div class="notification-content"><i class="fa fa-twitter"></i>You have 2
-                                            followers
-                                        </div>
-                                        <div class="notification-time"><small>10 minutes ago</small></div>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center">
-                                    <strong> <i class="fa fa-bell"></i>view all notifications </strong></a></li>
-                            </ul>
-                        </li>
-                        <!-- Messages dropdown-->
-                        <li class="nav-item dropdown"><a id="messages" rel="nofollow" data-target="#" href="#"
-                                                         data-toggle="dropdown" aria-haspopup="true"
-                                                         aria-expanded="false" class="nav-link"><i
-                                class="fa fa-envelope"></i><span class="badge badge-info">10</span></a>
-                            <ul aria-labelledby="notifications" class="dropdown-menu">
-                                <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                    <div class="msg-profile"><img th:src="@{/avatar-1.jpg}" alt="..."
-                                                                  class="img-fluid rounded-circle"></div>
-                                    <div class="msg-body">
-                                        <h3 class="h5">Jason Doe</h3><span>sent you a direct message</span><small>3 days
-                                        ago at 7:58 pm - 10.06.2019</small>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                    <div class="msg-profile"><img th:src="@{/img/avatar-2.jpg}" alt="..."
-                                                                  class="img-fluid rounded-circle"></div>
-                                    <div class="msg-body">
-                                        <h3 class="h5">Frank Williams</h3><span>sent you a direct message</span><small>3
-                                        days ago at 7:58 pm - 10.06.2019</small>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item d-flex">
-                                    <div class="msg-profile"><img th:src="@{/img/avatar-3.jpg}" alt="..."
-                                                                  class="img-fluid rounded-circle"></div>
-                                    <div class="msg-body">
-                                        <h3 class="h5">Ashley Wood</h3><span>sent you a direct message</span><small>3
-                                        days ago at 7:58 pm - 10.06.2019</small>
-                                    </div>
-                                </a></li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item all-notifications text-center">
-                                    <strong> <i class="fa fa-envelope"></i>Read all messages </strong></a></li>
-                            </ul>
-                        </li>
-                        <!-- Languages dropdown    -->
-                        <li class="nav-item dropdown"><a id="languages" rel="nofollow" data-target="#" href="#"
-                                                         data-toggle="dropdown" aria-haspopup="true"
-                                                         aria-expanded="false"
-                                                         class="nav-link language dropdown-toggle"><img
-                                th:src="@{/img/flags/16/GB.png}" alt="English"><span
-                                class="d-none d-sm-inline-block">English</span></a>
-                            <ul aria-labelledby="languages" class="dropdown-menu">
-                                <li><a rel="nofollow" href="#" class="dropdown-item"> <img th:src="@{/img/flags/16/DE.png}"
-                                                                                           alt="English"
-                                                                                           class="mr-2"><span>German</span></a>
-                                </li>
-                                <li><a rel="nofollow" href="#" class="dropdown-item"> <img th:src="@{/img/flags/16/FR.png}"
-                                                                                           alt="English"
-                                                                                           class="mr-2"><span>French                                                         </span></a>
-                                </li>
-                            </ul>
-                        </li>
-                        <!-- Log out-->
-                        <li class="nav-item"><a th:href="@{/user/logout}" class="nav-link logout"> <span
-                                class="d-none d-sm-inline-block">Logout</span><i class="fa fa-sign-out"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <div th:insert="~{commons/common::header}"></div>
     </header>
     <!-- Counts Section -->
     <section class="dashboard-counts section-padding">
@@ -660,19 +505,7 @@
         </div>
     </section>
     <footer class="main-footer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6">
-                    <p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank"
-                                                                                 href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a>
-                    </p>
-                </div>
-                <div class="col-sm-6 text-right">
-
-
-                </div>
-            </div>
-        </div>
+        <div th:insert="~{commons/common::footer}"></div>
     </footer>
 </div>
 <!-- JavaScript files-->
