--- a/src/main/resources/templates/employee/update.html
+++ b/src/main/resources/templates/employee/update.html
@@ -57,23 +57,24 @@
                         </div>
                         <div class="card-body">
                             <p> Fuck the world </p>
-                            <form th:action="@{addEmp}" method="post">
+                            <form th:action="@{updateEmp}" method="post">
+                                <input type="hidden" name="id" th:value="${employee.getId()}">
                                 <div class="form-group">
                                     <label>Name</label>
-                                    <input type="text" name="name" placeholder="NAME" class="form-control">
+                                    <input type="text" name="name" placeholder="NAME" class="form-control" th:value="${employee.getName()}">
                                 </div>
                                 <div class="form-group">
                                     <label>Email</label>
-                                    <input type="email" name="email" placeholder="Email Address" class="form-control">
+                                    <input type="email" name="email" placeholder="Email Address" class="form-control" th:value="${employee.getEmail()}">
                                 </div>
                                 <div class="form-group">
                                     <label>Gender</label>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" th:value="0">
+                                        <input class="form-check-input" type="radio" name="gender" th:value="0" th:checked="${employee.getGender()==0}">
                                         <label class="form-check-label">男</label>
                                     </div>
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" th:value="1">
+                                        <input class="form-check-input" type="radio" name="gender" th:value="1" th:checked="${employee.getGender()==1}">
                                         <label class="form-check-label">女</label>
                                     </div>
                                 </div>
@@ -81,12 +82,12 @@
                                     <label>Department</label>
                                     <!--因为Controller接收的是完整的Emp对象，所以我们需要提交的是其中的一个属性-->
                                     <select class="form-control" name="department.id">
-                                        <option th:each="depart:${departments}" th:text="${depart.getDepartmentName()}" th:value="${depart.getId()}"></option>
+                                        <option th:selected="${depart.getId() == employee.getDepartment().getId()}" th:each="depart:${departments}" th:text="${depart.getDepartmentName()}" th:value="${depart.getId()}"></option>
                                     </select>
                                 </div>
                                 <div class="form-group">
                                     <label>Birth</label>
-                                    <input type="text" name="birth" placeholder="Birth" class="form-control">
+                                    <input type="text" name="birth" placeholder="Birth" class="form-control" th:value="${#dates.format(employee.getBirth(), 'yyyy-MM-dd')}">
                                 </div>
                                 <div class="form-group" style="text-align: center">
                                     <input type="submit" value="Signin" class="btn btn-primary">
