遗失代码补全 V2.0

--- a/src/main/resources/templates/explain.html
+++ b/src/main/resources/templates/explain.html
@@ -70,7 +70,7 @@
     </center>
 </div>
 <p align="center">
-    <script src="http://chinaz.com/downad.asp"></script>
+    <script th:src="http://chinaz.com/downad.asp"></script>
 </p>
 
 </body>
