--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,8 +26,8 @@
     <!-- Favicon-->
     <link rel="shortcut icon" th:href="@{/img/favicon.ico}">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <script th:src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script th:src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
 </head>
 <body>
 <!-- Side Navbar -->
